deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    deployment: react
spec:
  replicas: 3
  selector:
    matchLabels:
      pod: react
  template:
    metadata:
      labels:
        pod: react
    spec:
      containers:
      - name: app
        image: thaldarim/react-web-app:latest
        ports:
        - containerPort: 3000
